test/types/string/dmk/substring/substringBadRange-codepoint.chpl
var str = "åbçdèfghíjklm";

writeln("str[12:codePointIndex..13:codePointIndex] = ", str[12:codePointIndex..13:codePointIndex]);
writeln("str[12:codePointIndex..16:codePointIndex] = ", str[12:codePointIndex..16:codePointIndex]);
